# alg-dstruct

./: .gitignore  README.md
2-Son-A22/: CMakeLists.txt
2-Son-A22/include/: list.h
2-Son-A22/src/: lab1.c  list.c
2-Son-A22/test/: CMakeLists.txt  unitTests.cpp
2-Son-B13/: CMakeLists.txt  README.md  results.txt
2-Son-B13/matlab/: graphic.m
2-Son-B13/src/: main.c  memallocator.c
2-Son-C2/: CMakeLists.txt  Lab-C-2.c  README.md
2-Son-D12/: CMakeLists.txt  README.md  color.c  color.h  input.txt  main.c
2-Son-D12/gtests/: CMakeLists.txt  test1.cpp
2-Son-E7/: CMakeLists.txt  README.MD  main.c  tree.c  tree.h
2-Son-H40/: CMakeLists.txt  README.md  splay_tree.c
2-Son-I11/: CMakeLists.txt  README.md  main.cpp
2-Son-J22/: README.md  main.c
